# ai_sec_medicalassistance

./: .gitignore  ARCHITECTURE.md  EXAMPLES.md  FAQ.md  IMPLEMENTATION_SUMMARY.md  LETTA_SEPARATE_SETUP.md  LETTA_SETUP.md  README.md  requirements.txt  setup.py  test_letta_integration.py
config/: settings.py
database/: letta_client.py
medicalcrew/: README.md  pyproject.toml
medicalcrew/src/medicalcrew/: crew.py  main.py
tools/: medical_tools.py
