[project]
name = "medicalcrew"
version = "0.1.0"
description = "medicalcrew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.4.1"
]

[project.scripts]
medicalcrew = "medicalcrew.main:run"
run_crew = "medicalcrew.main:run"
train = "medicalcrew.main:train"
replay = "medicalcrew.main:replay"
test = "medicalcrew.main:test"
run_with_trigger = "medicalcrew.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
